--- a/src/main/resources/config/application.yml
+++ b/src/main/resources/config/application.yml
@@ -29,3 +29,10 @@ mybatis:
   mapper-locations: classpath:mapper/*.xml
   config-location: classpath:config/MyBatisConfig.xml
 
+  #打印SQL
+logging:
+  level:
+    com.hnjca.wechat.dao : debug
+    #保存日志
+  file: ./logs/core.log
+  root: INFO
