--- a/pom.xml
+++ b/pom.xml
@@ -136,40 +136,45 @@
 
 
     <build>
-        <plugins>
+        <!--<plugins>
             <plugin>
-                <groupId>org.springframework.boot</groupId>
-                <artifactId>spring-boot-maven-plugin</artifactId>
-            </plugin>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-compiler-plugin</artifactId>
+                <artifactId>maven-assembly-plugin</artifactId>
+                <version>2.4</version>
                 <configuration>
-                    <source>8</source>
-                    <target>8</target>
+                    <descriptorRefs>
+                        <descriptorRef>jar-with-dependencies</descriptorRef>
+                    </descriptorRefs>
+                    <archive>
+                        <manifest>
+                            <mainClass>Main.Main</mainClass>
+                        </manifest>
+                    </archive>
                 </configuration>
+                <executions>
+                    <execution>
+                        <id>make-assembly</id>
+                        <phase>package</phase>
+                        <goals>
+                            <goal>single</goal>
+                        </goals>
+                    </execution>
+                </executions>
             </plugin>
+-->
 
-
+            <plugins>
                 <plugin>
                     <groupId>org.springframework.boot</groupId>
                     <artifactId>spring-boot-maven-plugin</artifactId>
-                    <executions>
-                        <execution>
-                            <goals>
-                                <goal>repackage</goal>
-                            </goals>
-                        </execution>
-                    </executions>
                 </plugin>
+            </plugins>
 
-        </plugins>
-
-        <!-- 页面 -->
+<!--
+        &lt;!&ndash; 页面 &ndash;&gt;
         <resources>
             <resource>
                 <directory>src/main/webapp</directory>
-                <!--注意此次必须要放在此目录下才能被访问到 -->
+                &lt;!&ndash;注意此次必须要放在此目录下才能被访问到 &ndash;&gt;
                 <targetPath>META-INF/resources</targetPath>
                 <includes>
                     <include>**/**</include>
@@ -182,7 +187,7 @@
                     <include>**/*</include>
                 </includes>
             </resource>
-        </resources>
+        </resources>-->
     </build>
 
 </project>
